# cxx_bridge_example

./: Cargo.toml
dialect_lib/: Cargo.toml  build.rs
dialect_lib/src/: lib.rs
mlir_dialect_cpp_part/: CMakeLists.txt
mlir_dialect_cpp_part/include/: lib.h
mlir_dialect_cpp_part/src/: lib.cpp
